tests/baselines/reference/parserParameterList17.errors.txt
==== tests/cases/compiler/parserParameterList17.ts (2 errors) ====
    class C {
       constructor(a = 4);
       ~~~~~~~~~~~~~~~~~~~
!!! parserParameterList17.ts(2,4): error TS2149: Overload signature is not compatible with function definition:
!!! 	Call signature expects 1 or fewer parameters.
                   ~~~~~
!!! parserParameterList17.ts(2,16): error TS2174: A parameter initializer is only allowed in a function or constructor implementation.
       constructor(a, b) { }
    }